--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationUsageDescription</key>
+	<string>notify when you arrive to a publication spot</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
