--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -2,10 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>notify always description</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>notify when you arrive to a publication spot</string>
 	<key>NSLocationUsageDescription</key>
 	<string>notify when you arrive to a publication spot</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>location</string>
 		<string>remote-notification</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
@@ -34,6 +39,8 @@
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
+		<string>gps</string>
+		<string>location-services</string>
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
