Updated the Pre-Build script to use "relative to project" paths.

--- a/FoodCollector/BaseURL.plist
+++ b/FoodCollector/BaseURL.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>Server URL</key>
-	<string>https://fd-server.herokuapp.com/</string>
+	<string>https://dev.fd-server.herokuapp.com/</string>
 </dict>
 </plist>
