v 1.0.5b1 After merging from UserDefaults

--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -28,6 +28,8 @@
 	<string>notify when you arrive to a publication spot</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Notify when you arrive to a publication spot</string>
+	<key>Server URL</key>
+	<string>https://fd-server.herokuapp.com/</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
