--- a/FoodCollector/BaseURL.plist
+++ b/FoodCollector/BaseURL.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>Foodonet</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.gogalefree.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<key>CFBundleName</key>
+	<string>$(PRODUCT_NAME)</string>
 	<key>Server URL</key>
 	<string>https://fd-server.herokuapp.com/</string>
 </dict>
