--- a/FoodCollector/BaseURL.plist
+++ b/FoodCollector/BaseURL.plist
@@ -9,6 +9,6 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>Server URL</key>
-	<string>https://fd-server.herokuapp.com/</string>
+	<string>https://prv-fd-server.herokuapp.com/</string>
 </dict>
 </plist>
