--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -45,6 +45,13 @@
 	<string>694275220709803</string>
 	<key>FacebookDisplayName</key>
 	<string>Foodonet</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
