implemented google sign in

--- a/FoodCollector/GoogleService-Info.plist
+++ b/FoodCollector/GoogleService-Info.plist
@@ -23,7 +23,7 @@
 	<key>IS_GCM_ENABLED</key>
 	<false/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<false/>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:863661704420:ios:a2c91901b3bea437</string>
 </dict>
