Added: Leave group does not delete the group. admin is switched to a different group member. Notifications badge number ActivityLog notification counter Publication details photo presentor on full screen Publication details reports presenter on full screen Publication details bug fixes: tableview cells dont show selection Publication Details reports cells count FCModel data controller as static property

--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -100,6 +100,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Display a message when arriving to pickup location</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Display a message when arriving to pickup location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
