Added QuickItems Before Merge

--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -108,6 +108,29 @@
 	<string>Display a message when arriving to pickup location</string>
 	<key>Server URL</key>
 	<string>https://fd-server.herokuapp.com/</string>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeLocation</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>events near you</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>What&apos;s Near</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).nearYouAction</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeAdd</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>share something</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Post Event</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).addAction</string>
+		</dict>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
