Translated the info.plist string including the UIApplicationShortcutItems

--- a/FoodCollector/Info.plist
+++ b/FoodCollector/Info.plist
@@ -114,9 +114,9 @@
 			<key>UIApplicationShortcutItemIconType</key>
 			<string>UIApplicationShortcutIconTypeLocation</string>
 			<key>UIApplicationShortcutItemSubtitle</key>
-			<string>events near you</string>
+			<string>Events near you</string>
 			<key>UIApplicationShortcutItemTitle</key>
-			<string>What's Near</string>
+			<string>What&apos;s Near</string>
 			<key>UIApplicationShortcutItemType</key>
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER).nearYouAction</string>
 		</dict>
@@ -124,7 +124,7 @@
 			<key>UIApplicationShortcutItemIconType</key>
 			<string>UIApplicationShortcutIconTypeAdd</string>
 			<key>UIApplicationShortcutItemSubtitle</key>
-			<string>share something</string>
+			<string>Share something</string>
 			<key>UIApplicationShortcutItemTitle</key>
 			<string>Post Event</string>
 			<key>UIApplicationShortcutItemType</key>
